--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <div class="to-do-input">
     <form  action="index.html" method="post">
-      <input type="text" class="input" name="nameOfTask">
+      <input type="text" class="input" name="nameOfTask" placeholder="Enter The Task">
       <button type="submit"class="to-do-button" name="submit"><i class="fas fa-plus-circle"></i></button>
       <div class="filter-section">
         <select class="filter-to-do" name="to-dos">
